--- a/index.html
+++ b/index.html
@@ -520,11 +520,9 @@
 				<div class="row justify-content-center">
 					<!-- -->
 					<div class="col-md-6 sr-up">
-						<form>
-							<div class="form-group row">
-								<input type="email" class="form-control form-md col-md-6" id="" placeholder="Enter Email Address">
-								<button class="btn btn-secondary btn-md col-md-6">Subscribe</button>
-							</div>
+						  <form>
+								<input type="email" class="form-control form-lg col-md-12" id="" placeholder="Enter Email Address">
+								<button class="btn btn-secondary btn-lg col-md-4">Subscribe</button>
 						  </form>
 					</div>
 					<!-- / -->
@@ -788,11 +786,6 @@
 		<script src="scripts/scripts.js"></script>
 		<script src="scripts/customscrollbar.js"></script>
 		<script type="text/javascript">
-			$(".heading").html(function(){
-				var text= $(this).text().trim().split(" ");
-				var first = text.shift();
-				return (text.length > 0 ? "<strong>"+ first + "</strong> " : first) + text.join(" ");
-			});
 		</script>
 	</body>
 </html>
