--- a/index.html
+++ b/index.html
@@ -57,10 +57,9 @@
 				<nav id="menu" class="panel" role="navigation">
 					<ul class="">
 						<li class="list-menu-item"><a class="nav-link" data-scroll href="#home">Home</a></li>
-						<li class="list-menu-item"><a class="nav-link" data-scroll href="#about">About</a></li>
-						<li class="list-menu-item"><a class="nav-link" data-scroll href="#solutions">Solutions</a></li>
-						<li class="list-menu-item"><a class="nav-link" data-scroll href="#clients">Clients</a></li>
-						<li class="list-menu-item"><a class="nav-link" data-scroll href="#blog">Blog</a></li>
+						<li class="list-menu-item"><a class="nav-link" data-scroll href="#about">About Our Company</a></li>
+						<li class="list-menu-item"><a class="nav-link" data-scroll href="#serviecs">Services</a></li>
+						<li class="list-menu-item"><a class="nav-link" data-scroll href="#contact">Contact Us</a></li>
 					</ul>
 				</nav>
 				<!-- /#menu -->
@@ -85,10 +84,9 @@
 						<div id="nav_menu" class="col-md-9">
 							<ul class="list-menu mt-1">
 								<li class="list-menu-item"><a class="nav-link" data-scroll href="#home">Home</a></li>
-								<li class="list-menu-item"><a class="nav-link" data-scroll href="#about">About</a></li>
-								<li class="list-menu-item"><a class="nav-link" data-scroll href="#solutions">Solutions</a></li>
-								<li class="list-menu-item"><a class="nav-link" data-scroll href="#clients">Clients</a></li>
-								<li class="list-menu-item"><a class="nav-link" data-scroll href="#blog">Blog</a></li>
+								<li class="list-menu-item"><a class="nav-link" data-scroll href="#about">About Our Company</a></li>
+								<li class="list-menu-item"><a class="nav-link" data-scroll href="#serviecs">Services</a></li>
+								<li class="list-menu-item"><a class="nav-link" data-scroll href="#contact">Contact Us</a></li>
 							</ul>
 						</div>
 						<!-- / -->
@@ -109,9 +107,9 @@
 				<div class="row">
 					<!-- -->
 					<div class="col-md-6">
-						<h1>From Virtual Assistants to Digital Marketers</h1>
-						<h4>We’ve got the most skilled people you’ll ever meet online to help your business.</h4>
-						<a href="#" class="btn btn-secondary btn-lg">Get Started</a>
+						<h1>Building your offshore team has never been easier</h1>
+						<h4>We’re here to help grow your business. No need to worry about facilities, recruiting, payroll, and operations.</h4>
+						<a href="#contact" class="btn btn-secondary btn-lg">Get Started</a>
 					</div>
 					<!--/ -->
 
@@ -164,7 +162,6 @@
 		<!-- /.fold-about -->
 
 		<!-- .fold-clients -->
-		<!--div id="" class="fold-clients parallax" data-parallax="scroll" data-image-src="images/bg-main-fold.png"-->
 		<div id="clients" class="fold-clients waves">
 			<!-- .container -->
 			<div class="container">
@@ -206,8 +203,8 @@
 		</div>
 		<!-- /.fold-clients -->
 
-		<!-- .fold-solutions -->
-		<div id="solutions" class="fold fold-solutions shaded">
+		<!-- .fold-services -->
+		<div id="services" class="fold fold-services shaded">
 			<!-- .container -->
 			<div class="container">
 				<!-- .row -->
@@ -222,7 +219,7 @@
 				<!-- /.row -->
 
 				<!-- .row -->
-				<div class="row deck-solutions">
+				<div class="row deck-services">
 					<!-- -->
 					<div class="col-md-12 card-deck">
 						<!-- .card -->
@@ -499,7 +496,7 @@
 			</div>
 			<!-- /.container -->
 		</div>
-		<!-- /.fold-solutions -->
+		<!-- /.fold-services -->
 
 		<!-- .fold-newsletter -->
 		<div id="newsletter" class="fold-newsletter waves">
@@ -656,6 +653,35 @@
 			<!-- /.container -->
 		</div>
 		<!-- /.fold-blog -->
+
+		<!-- .fold-contact -->
+		<div id="contact" class="fold-contact">
+			<!-- .container -->
+			<div class="container">
+				<!-- .row -->
+				<div class="row justify-content-center">
+					<!--  -->
+					<div class="col-md-6 text-center">
+						<h5>Contact</h5>
+						<h3 class="mb-0">Contact</h3>
+					</div>
+					<!-- / -->
+				</div>
+				<!-- /.row -->
+
+				<!-- .row -->
+				<div class="row justify-content-center">
+					<!-- -->
+					<div class="col-md-10 sr-up">
+						
+					</div>
+					<!-- / -->
+				</div>
+				<!--/ -->
+			</div>
+			<!-- /.container -->
+		</div>
+		<!-- /.fold-clients -->
 		
 		<!-- footer -->
 		<footer class="waves" style="background-image: url(images/bg-footer.png);">
