--- a/index.html
+++ b/index.html
@@ -58,10 +58,11 @@
 				<nav id="menu" class="panel" role="navigation">
 					<ul class="">
 						<li class="list-menu-item"><a class="nav-link" data-scroll href="#home">Home</a></li>
-						<li class="list-menu-item"><a class="nav-link" data-scroll href="#about">About Our Company</a></li>
+						<li class="list-menu-item"><a class="nav-link" data-scroll href="#about">About</a></li>
 						<li class="list-menu-item"><a class="nav-link" data-scroll href="#steps">Steps</a></li>
 						<li class="list-menu-item"><a class="nav-link" data-scroll href="#solutions">Services</a></li>
-						<li class="list-menu-item"><a class="nav-link" data-scroll href="#contact">Contact Us</a></li>
+						<li class="list-menu-item"><a class="nav-link" data-scroll href="#faq">FAQ</a></li>
+						<li class="list-menu-item"><a class="nav-link" data-scroll href="#contact">Contact</a></li>
 					</ul>
 				</nav>
 				<!-- /#menu -->
@@ -86,10 +87,11 @@
 						<div id="nav_menu" class="col-md-9">
 							<ul class="list-menu mt-1">
 								<li class="list-menu-item"><a class="nav-link" data-scroll href="#home">Home</a></li>
-								<li class="list-menu-item"><a class="nav-link" data-scroll href="#about">About Our Company</a></li>
+								<li class="list-menu-item"><a class="nav-link" data-scroll href="#about">About</a></li>
 								<li class="list-menu-item"><a class="nav-link" data-scroll href="#steps">Steps</a></li>
 								<li class="list-menu-item"><a class="nav-link" data-scroll href="#solutions">Services</a></li>
-								<li class="list-menu-item"><a class="nav-link" data-scroll href="#contact">Contact Us</a></li>
+								<li class="list-menu-item"><a class="nav-link" data-scroll href="#faq">FAQ</a></li>
+								<li class="list-menu-item"><a class="nav-link" data-scroll href="#contact">Contact</a></li>
 							</ul>
 						</div>
 						<!-- / -->
@@ -280,7 +282,7 @@
 		<!-- /.fold-clients -->
 
 		<!-- .fold-services -->
-		<div id="solutions" class="fold fold-services shaded">
+		<div id="solutions" class="fold fold-services shaded" style="background-image: url(images/bg-shape-2.png);">
 			<!-- .container -->
 			<div class="container">
 				<!-- .row -->
@@ -616,14 +618,106 @@
 		</div>
 		<!-- /.fold-newsletter -->
 
-		<!-- .fold-services -->
-		<div id="" class="fold-">
+		<!-- .fold-testimonials -->
+		<div id="testimonials" class="fold fold-testimonials shaded">
 			<!-- .container -->
 			<div class="container">
 				<!-- .row -->
 				<div class="row">
 					<!--  -->
-					<div class="col-md-12">
+					<div class="col-md-4">
+						<h5 class="fc-violet">Testimonials</h5>
+						<h3>What Our Client's Say</h3>
+						<p>Offshore Office 360 clients and their results are the best proof that our methodologies work. But we’ve also received numerous awards and praise from the media and our peers.</p>
+
+						<a href="#" class="btn btn-primary btn-lg">Work With Us</a>
+					</div>
+					<!-- / -->
+
+					<!--  -->
+					<div class="col-md-8">
+						<!-- #slider_testimonials -->
+						<div id="slider_testimonials" class="carousel slide" data-ride="carousel">
+							<!-- .carousel-indicators -->
+							<ol class="carousel-indicators">
+								<li data-target="#slider_testimonials" data-slide-to="0" class="active"></li>
+								<li data-target="#slider_testimonials" data-slide-to="1"></li>
+							</ol>
+							<!-- /.carousel-indicators -->
+
+							<!-- .carousel-inner -->
+							<div class="carousel-inner">
+								<!-- .carousel-item -->
+								<div class="carousel-item active">
+									<!-- .card-deck -->
+									<div class="card-deck">
+										<!-- .card -->
+										<div class="card">
+											<!-- .card-body -->
+											<div class="card-body">
+												<img src="images/img-person-1.jpg" class="img-fluid" alt="" />
+												<h4 class="mb-0">Gus Friedman</h4>
+												<p class="fc-navy position mb-4">Marketing Manager</p>
+												<p>Offshore Office 360 helped my business save thousands of dollars in the past 6 months. Arianna (Virtual Assistant) has been very helpful with organizing all the processes that we had trouble dealing with in the past.</p>
+											</div>
+											<!-- /.card-body -->
+										</div>
+										<!-- /.card -->
+
+										<!-- .card -->
+										<div class="card">
+											<!-- .card-body -->
+											<div class="card-body">
+												<img src="images/img-person-2.jpg" class="img-fluid" alt="" />
+												<h4 class="mb-0">Brian Shad</h4>
+												<p class="fc-navy position mb-4">CEO</p>
+												<p>We love working with Jewel. Since her first day, she has performed really well and has become an integral part of ProLink.</p>
+											</div>
+											<!-- /.card-body -->
+										</div>
+										<!-- /.card -->
+									</div>
+									<!-- /.card-deck -->
+								</div>
+								<!-- /.carousel-item-->
+
+								<!-- .carousel-item -->
+								<div class="carousel-item">
+									<!-- .card-deck -->
+									<div class="card-deck">
+										<!-- .card -->
+										<div class="card">
+											<!-- .card-body -->
+											<div class="card-body">
+												<img src="images/img-person-1.jpg" class="img-fluid" alt="" />
+												<h4 class="mb-0">Gus Friedman</h4>
+												<p class="fc-navy position mb-4">Marketing Manager</p>
+												<p>Offshore Office 360 helped my business save thousands of dollars in the past 6 months. Arianna (Virtual Assistant) has been very helpful with organizing all the processes that we had trouble dealing with in the past.</p>
+											</div>
+											<!-- /.card-body -->
+										</div>
+										<!-- /.card -->
+
+										<!-- .card -->
+										<div class="card">
+											<!-- .card-body -->
+											<div class="card-body">
+												<img src="images/img-person-2.jpg" class="img-fluid" alt="" />
+												<h4 class="mb-0">Brian Shad</h4>
+												<p class="fc-navy position mb-4">CEO</p>
+												<p>We love working with Jewel. Since her first day, she has performed really well and has become an integral part of ProLink.</p>
+											</div>
+											<!-- /.card-body -->
+										</div>
+										<!-- /.card -->
+									</div>
+									<!-- /.card-deck -->
+								</div>
+								<!-- /.carousel-item-->
+							</div>
+							<!-- /.carousel-inner -->
+						</div>
+						<!-- /#slider_testimonials -->
 					</div>
 					<!-- / -->
 				</div>
@@ -631,10 +725,115 @@
 			</div>
 			<!-- /.container -->
 		</div>
-		<!-- /.fold-services -->
+		<!-- /.fold-testimonials -->
+
+		<!-- .fold-faq -->
+		<div id="faq" class="fold fold-faq">
+			<!-- .container -->
+			<div class="container">
+				<!-- .row -->
+				<div class="row">
+					<!--  -->
+					<div class="col-md-6">
+						<img src="images/img-about.png" class="img-fluid" alt="" />
+					</div>
+					<!-- / -->
+
+					<style>
+						.accordion { margin-bottom: 40px; }
+						.accordion .card { margin-bottom: 20px; border-radius: 10px !important; }
+						.accordion .accordion-panel { font-weight: bold; }
+						.accordion .accordion-panel a { padding: 20px; display: block; }
+						.accordion .accordion-panel i { float: right; line-height: 24px; color: #ad2bad; transition: 0.3s all; transform: rotate(0); }
+						.accordion .accordion-panel .collapsed i { transform: rotate(180deg); }
+					</style>
+
+					<!--  -->
+					<div class="col-md-6">
+						<h5 class="fc-violet">We Are Dedicated</h5>
+						<h2>Frequently Asked Questions</h2>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+
+						<!-- #collapse_faq -->
+						<div class="accordion" id="collapse_faq">
+							<!-- .card -->
+							<div class="card">
+								<p class="accordion-panel mb-0">
+									<a type="button" href="#" data-toggle="collapse" data-target="#faq_1">
+										How does your business  save costs by hiring an offshore team?
+										<i class="fas fa-angle-up fa-2x"></i>
+									</a>
+								</p>
+
+								<!-- #faq_1 -->
+								<div id="faq_1" class="collapse show" data-parent="#collapse_faq">
+									<!-- .card-body -->
+									<div class="card-body">
+										<p class="mb-0">The Philippines is the perfect location for starting an offshore team. 95% of the people speak English, the cost of living is low, and Filipinos are one of the best countries to deal with customer experience.</p>
+									</div>
+									<!-- /.card-body -->
+								</div>
+								<!-- /#faq_1 -->
+							</div>
+							<!-- /.card -->
+
+							<!-- .card -->
+							<div class="card">
+								<p class="accordion-panel mb-0">
+									<a class="collapsed" type="button" href="#" data-toggle="collapse" data-target="#faq_2">
+										Why the Philippines?
+										<i class="fas fa-angle-up fa-2x"></i>
+									</a>
+								</p>
+
+								<!-- #faq_2 -->
+								<div id="faq_2" class="collapse" data-parent="#collapse_faq">
+									<!-- .card-body -->
+									<div class="card-body">
+										<p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+									</div>
+									<!-- /.card-body -->
+								</div>
+								<!-- /#faq_2 -->
+							</div>
+							<!-- /.card -->
+
+							<!-- .card -->
+							<div class="card">
+								<p class="accordion-panel mb-0">
+									<a class="collapsed" type="button" href="#" data-toggle="collapse" data-target="#faq_3">
+										Payments
+										<i class="fas fa-angle-up fa-2x"></i>
+									</a>
+								</p>
+
+								<!-- #faq_3 -->
+								<div id="faq_3" class="collapse" data-parent="#collapse_faq">
+									<!-- .card-body -->
+									<div class="card-body">
+										<p class="mb-0">Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod.</p>
+									</div>
+									<!-- /.card-body -->
+								</div>
+								<!-- /#faq_3 -->
+							</div>
+							<!-- /.card -->
+						</div>
+						<!-- /#collapse_faq -->
+
+						<a href="#" class="btn btn-primary btn-lg">Read More</a>
+						<a href="#contact" class="btn btn-secondary btn-lg">Get Started</a>
+					</div>
+					<!-- / -->
+				</div>
+				<!-- /.row -->
+			</div>
+			<!-- /.container -->
+		</div>
+		<!-- /.fold-about -->
 
 		<!-- .fold-blog -->
-		<div id="blog" class="fold fold-blog shaded">
+		<div id="blog" class="fold fold-blog shaded" style="background-image: url(images/bg-shape-1.png);">
 			<!-- .container -->
 			<div class="container">
 				<!-- .row -->
