--- a/index.html
+++ b/index.html
@@ -286,18 +286,19 @@
 			<!-- .container -->
 			<div class="container">
 				<!-- .row -->
-				<div class="row justify-content-between">
+				<div class="row justify-content-between mb-5">
 					<!--  -->
-					<div class="col-md-4">
+					<div class="col-md-8">
 						<h5 class="fc-violet">Our Solutions</h5>
 						<h2>Interested to Get our Flexible Service</h2>
+						<p>We make staffing quick and efficient. We begin by identifying key functions and job roles that you need in your business. Applicant resumes/CV’s will be provided to you for your review and you may qualify who to hire as we will set-up online interviews for you. We will also lay down systems that are used for the service fulfillment. Below is a quick list of our readily available workforce.</p>
 					</div>
 					<!-- / -->
 				</div>
 				<!-- /.row -->
 
 				<!-- .row -->
-				<div class="row deck-services">
+				<div class="row deck-services mb-5">
 					<!-- -->
 					<div class="col-md-12 card-deck">
 						<!-- .card -->
@@ -314,7 +315,7 @@
 									<path id="icon" d="M512 160h-96V64c0-35.3-28.7-64-64-64H64C28.7 0 0 28.7 0 64v160c0 35.3 28.7 64 64 64h32v52c0 7.1 5.8 12 12 12 2.4 0 4.9-.7 7.1-2.4l76.9-43.5V384c0 35.3 28.7 64 64 64h96l108.9 61.6c2.2 1.6 4.7 2.4 7.1 2.4 6.2 0 12-4.9 12-12v-52h32c35.3 0 64-28.7 64-64V224c0-35.3-28.7-64-64-64zM64 256c-17.6 0-32-14.4-32-32V64c0-17.6 14.4-32 32-32h288c17.6 0 32 14.4 32 32v160c0 17.6-14.4 32-32 32H215.6l-7.3 4.2-80.3 45.4V256zm480 128c0 17.6-14.4 32-32 32h-64v49.6l-80.2-45.4-7.3-4.2H256c-17.6 0-32-14.4-32-32v-96h128c35.3 0 64-28.7 64-64v-32h96c17.6 0 32 14.4 32 32z"/>
 								</svg>
 
-								<h4>Virtual Assistant</h4>
+								<h5>Virtual Assistant</h5>
 								<p>Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</p>
 							</div>
 							<!-- /.card-body -->
@@ -575,7 +576,7 @@
 				<!-- .row -->
 				<div class="row">
 					<!--  -->
-					<div class="col-md-4">
+					<div class="col-md-12 text-center">
 						<a href="#" class="btn btn-primary">View All Services</a>
 					</div>
 					<!-- / -->
@@ -738,15 +739,6 @@
 						<img src="images/img-about.png" class="img-fluid" alt="" />
 					</div>
 					<!-- / -->
-
-					<style>
-						.accordion { margin-bottom: 40px; }
-						.accordion .card { margin-bottom: 20px; border-radius: 10px !important; }
-						.accordion .accordion-panel { font-weight: bold; }
-						.accordion .accordion-panel a { padding: 20px; display: block; }
-						.accordion .accordion-panel i { float: right; line-height: 24px; color: #ad2bad; transition: 0.3s all; transform: rotate(0); }
-						.accordion .accordion-panel .collapsed i { transform: rotate(180deg); }
-					</style>
 
 					<!--  -->
 					<div class="col-md-6">
@@ -1283,12 +1275,6 @@
 		<script src="scripts/scripts.js"></script>
 		<script src="scripts/customscrollbar.js"></script>
 		<script type="text/javascript">
-			// Time Picker
-			$(function () {
-				$('#timepicker').datetimepicker({
-					format: 'LT'
-				});
-			});
 		</script>
 	</body>
 </html>
