--- a/index.html
+++ b/index.html
@@ -58,11 +58,10 @@
 				<nav id="menu" class="panel" role="navigation">
 					<ul class="">
 						<li class="list-menu-item"><a class="nav-link" data-scroll href="#home">Home</a></li>
-						<li class="list-menu-item"><a class="nav-link" data-scroll href="#about">About</a></li>
-						<li class="list-menu-item"><a class="nav-link" data-scroll href="#steps">Steps</a></li>
-						<li class="list-menu-item"><a class="nav-link" data-scroll href="#solutions">Services</a></li>
-						<li class="list-menu-item"><a class="nav-link" data-scroll href="#faq">FAQ</a></li>
-						<li class="list-menu-item"><a class="nav-link" data-scroll href="#contact">Contact</a></li>
+						<li class="list-menu-item"><a class="nav-link" data-scroll href="#about">Why Offshore Office</a></li>
+						<li class="list-menu-item"><a class="nav-link" data-scroll href="#steps">How It Works</a></li>
+						<li class="list-menu-item"><a class="nav-link" data-scroll href="#solutions">Build Your Team</a></li>
+						<li class="list-menu-item"><a class="nav-link" data-scroll href="#contact">Contact Us</a></li>
 					</ul>
 				</nav>
 				<!-- /#menu -->
@@ -87,11 +86,10 @@
 						<div id="nav_menu" class="col-md-9">
 							<ul class="list-menu mt-1">
 								<li class="list-menu-item"><a class="nav-link" data-scroll href="#home">Home</a></li>
-								<li class="list-menu-item"><a class="nav-link" data-scroll href="#about">About</a></li>
-								<li class="list-menu-item"><a class="nav-link" data-scroll href="#steps">Steps</a></li>
-								<li class="list-menu-item"><a class="nav-link" data-scroll href="#solutions">Services</a></li>
-								<li class="list-menu-item"><a class="nav-link" data-scroll href="#faq">FAQ</a></li>
-								<li class="list-menu-item"><a class="nav-link" data-scroll href="#contact">Contact</a></li>
+								<li class="list-menu-item"><a class="nav-link" data-scroll href="#about">Why Offshore Office</a></li>
+								<li class="list-menu-item"><a class="nav-link" data-scroll href="#steps">How It Works</a></li>
+								<li class="list-menu-item"><a class="nav-link" data-scroll href="#solutions">Build Your Team</a></li>
+								<li class="list-menu-item"><a class="nav-link" data-scroll href="#contact">Contact Us</a></li>
 							</ul>
 						</div>
 						<!-- / -->
@@ -106,15 +104,16 @@
 			
 		<!-- .fold-main -->
 		<div id="home" class="fold fold-main waves" style="background-image: url(images/bg-main-fold.png);">
+			
+
 			<!-- .container -->
 			<div class="container">
 				<!-- -->
 				<div class="row">
 					<!-- -->
 					<div class="col-md-6 sr-right">
-						<h1>Building your offshore team has never been easier</h1>
-						<h4>We’re here to help grow your business. No need to worry about facilities, recruiting, payroll, and operations.</h4>
-						<a href="#about" class="btn btn-primary btn-lg">Learn More</a>
+						<h1>Building your offshore team has never been easier.</h1>
+						<h4 class="mb-5">We’re here to help grow your business. No need to worry about facilities, recruitment, payroll, and operations. We’ve got you covered.</h4>
 						<a href="#contact" class="btn btn-secondary btn-lg">Get Started</a>
 					</div>
 					<!--/ -->
@@ -122,6 +121,19 @@
 					<!-- -->
 					<div class="col-md-6 sr-left">
 						<img src="images/banner-main.png" class="img-fluid" alt="" />
+					</div>
+					<!--/ -->
+				</div>
+				<!-- / -->
+
+				<!-- -->
+				<div class="row">
+					<!-- -->
+					<div class="col-md-12 sr-up text-center">
+						<a class="icon-scroll" href="#about">
+							<div></div>
+							<span>Scroll Down</span>
+						</a>
 					</div>
 					<!--/ -->
 				</div>
@@ -145,15 +157,16 @@
 
 					<!--  -->
 					<div class="col-md-6 sr-left">
-						<h5 class="fc-violet">Welcome to Offshore Office 360</h5>
-						<h2>Why choose Offshore Office</h2>
-						<p>Take advantage of more affordable rates without compromising the quality of the service you get. The Philippines is the no. 1 country that is home to people who speak English as their second language. Filipinos are also known to have the highest rating in customer service and work quality.</p>
+						<h5 class="fc-violet">Why Choose Offshore Office 360?</h5>
+						<h2>Benefits of Building Your Offshore Team</h2>
+						<p>Building a team with the right people will most likely determine your business’ future. With Offshore Office,  you can get ahead of your competitors with our affordable staffing rates and top-tier service professionals.</p>
+						<p>The Philippines is the #1 choice for businesses abroad with the most number of English speaking professionals and we Filipinos are known to have the highest rating in customer service, service quality and work output.</p>
 
 						<ul class="list-unstyled list-checklist mb-5">
-							<li>Invest in the lower salary rates</li>
-							<li>Harness the skills of a highly educated workforce</li>
-							<li>Enjoy high quality service</li>
-							<li>Expect reliable outcomes</li>
+							<li>Affordable &amp; Competitive Staffing Rates</li>
+							<li>Highly Educated & Skilled Workforce</li>
+							<li>Manageable & Easily Trainable Staff</li>
+							<li>Results-Oriented Team of Professionals</li>
 						</ul>
 
 						<a href="#steps" class="btn btn-primary btn-lg">How It Works</a>
@@ -174,22 +187,22 @@
 				<!-- .row -->
 				<div class="row justify-content-center mb-5 sr-down">
 					<!--  -->
-					<div class="col-md-5 text-center">
+					<div class="col-md-4 text-center mb-5">
 						<h5>How it works</h5>
-						<h3>You’ll be surprised how easy building an offshore team is</h3>
+						<h3>Build your offshore team in 3 easy steps</h3>
 					</div>
 					<!-- / -->
 				</div>
 				<!-- /.row -->
 				
 				<!-- .row -->
-				<div class="row deck-steps mt-5">
+				<div class="row deck-steps mt-5 mb-5">
 					<!-- -->
 					<div class="col-md-12 card-deck">
 						<!-- .card -->
 						<div class="card step-1 sr-up sr-delay-1">
 							<!-- .card-img-top -->
-							<div class="card-img-top"><img src="images/img-step-1.jpg" class="img-fluid" alt=""></div>
+							<div class="card-img-top hidden"><img src="images/img-step-1.jpg" class="img-fluid" alt=""></div>
 							<!-- /.card-img-top -->
 
 							<!-- .card-body -->
@@ -203,10 +216,6 @@
 
 						<!-- .card -->
 						<div class="card step-2 sr-up sr-delay-2">
-							<!-- .card-img-top -->
-							<div class="card-img-top"><img src="images/img-step-1.jpg" class="img-fluid" alt=""></div>
-							<!-- /.card-img-top -->
-
 							<!-- .card-body -->
 							<div class="card-body">
 								<span class="waves">2</span>
@@ -218,10 +227,6 @@
 
 						<!-- .card -->
 						<div class="card step-3 sr-up sr-delay-3">
-							<!-- .card-img-top -->
-							<div class="card-img-top"><img src="images/img-step-1.jpg" class="img-fluid" alt=""></div>
-							<!-- /.card-img-top -->
-
 							<!-- .card-body -->
 							<div class="card-body">
 								<span class="waves">3</span>
@@ -230,6 +235,16 @@
 							<!-- /.card-body -->
 						</div>
 						<!-- /.card -->
+					</div>
+					<!-- / -->
+				</div>
+				<!-- /.row -->
+
+				<!-- .row -->
+				<div class="row justify-content-center mb-5 sr-down">
+					<!--  -->
+					<div class="col-md-4 text-center mb-5">
+						<a href="#contact" class="btn btn-secondary btn-lg">Consult with Us Today</a>
 					</div>
 					<!-- / -->
 				</div>
@@ -260,16 +275,16 @@
 					<div class="col-md-10 sr-up">
 						<!-- .slider -->
 						<section class="clients-logo slider">
-							<a class="slide"><img src="clients/client-mk-media-ventures.png" class="img-fluid" alt=""></a>
+							<a class="slide"><img src="clients/client-oti-topic.png" class="img-fluid" alt=""></a>
 							<a class="slide"><img src="clients/client-prolink-systems.png" class="img-fluid" alt=""></a>
 							<a class="slide"><img src="clients/client-thalos.png" class="img-fluid" alt=""></a>
 							<a class="slide"><img src="clients/client-supergiant.png" class="img-fluid" alt=""></a>
-							<a class="slide"><img src="clients/client-shine-armor.png" class="img-fluid" alt=""></a>
-							<a class="slide"><img src="clients/client-mk-media-ventures.png" class="img-fluid" alt=""></a>
+							<a class="slide"><img src="clients/client-ngk.png" class="img-fluid" alt=""></a>
+							<a class="slide"><img src="clients/client-oti-topic.png" class="img-fluid" alt=""></a>
 							<a class="slide"><img src="clients/client-prolink-systems.png" class="img-fluid" alt=""></a>
 							<a class="slide"><img src="clients/client-thalos.png" class="img-fluid" alt=""></a>
 							<a class="slide"><img src="clients/client-supergiant.png" class="img-fluid" alt=""></a>
-							<a class="slide"><img src="clients/client-shine-armor.png" class="img-fluid" alt=""></a>
+							<a class="slide"><img src="clients/client-ngk.png" class="img-fluid" alt=""></a>
 						</section>
 						<!-- /.slider -->
 					</div>
@@ -289,8 +304,8 @@
 				<div class="row justify-content-between mb-5 sr-up">
 					<!--  -->
 					<div class="col-md-8">
-						<h5 class="fc-violet">Our Solutions</h5>
-						<h2>Interested to Get our Flexible Service</h2>
+						<h5 class="fc-violet">Build Your Team</h5>
+						<h2>Choose from Our List of Team Roles</h2>
 						<p>We make staffing quick and efficient. We begin by identifying key functions and job roles that you need in your business. Applicant resumes/CV’s will be provided to you for your review and you may qualify who to hire as we will set-up online interviews for you. We will also lay down systems that are used for the service fulfillment. Below is a quick list of our readily available workforce.</p>
 					</div>
 					<!-- / -->
@@ -314,7 +329,6 @@
 									</defs>
 									<path id="icon" d="M512 160h-96V64c0-35.3-28.7-64-64-64H64C28.7 0 0 28.7 0 64v160c0 35.3 28.7 64 64 64h32v52c0 7.1 5.8 12 12 12 2.4 0 4.9-.7 7.1-2.4l76.9-43.5V384c0 35.3 28.7 64 64 64h96l108.9 61.6c2.2 1.6 4.7 2.4 7.1 2.4 6.2 0 12-4.9 12-12v-52h32c35.3 0 64-28.7 64-64V224c0-35.3-28.7-64-64-64zM64 256c-17.6 0-32-14.4-32-32V64c0-17.6 14.4-32 32-32h288c17.6 0 32 14.4 32 32v160c0 17.6-14.4 32-32 32H215.6l-7.3 4.2-80.3 45.4V256zm480 128c0 17.6-14.4 32-32 32h-64v49.6l-80.2-45.4-7.3-4.2H256c-17.6 0-32-14.4-32-32v-96h128c35.3 0 64-28.7 64-64v-32h96c17.6 0 32 14.4 32 32z"/>
 								</svg>
-
 								<h4>Virtual Assistant</h4>
 								<p>Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</p>
 							</div>
@@ -729,7 +743,7 @@
 		<!-- /.fold-testimonials -->
 
 		<!-- .fold-faq -->
-		<div id="faq" class="fold fold-faq">
+		<div id="faq" class="fold fold-faq hidden">
 			<!-- .container -->
 			<div class="container">
 				<!-- .row -->
@@ -825,7 +839,7 @@
 		<!-- /.fold-about -->
 
 		<!-- .fold-blog -->
-		<div id="blog" class="fold fold-blog shaded" style="background-image: url(images/bg-shape-1.png);">
+		<div id="blog" class="fold fold-blog shaded hidden" style="background-image: url(images/bg-shape-1.png);">
 			<!-- .container -->
 			<div class="container">
 				<!-- .row -->
