--- a/index.html
+++ b/index.html
@@ -991,7 +991,7 @@
 										<div class="card">
 											<!-- .card-body -->
 											<div class="card-body">
-												<img src="images/img-person-1.jpg" class="img-fluid" alt="" />
+												<img src="images/img-gus-friedman.jpg" class="img-fluid" alt="" />
 												<h4 class="mb-0">Gus Friedman</h4>
 												<p class="fc-navy position mb-4">Marketing Manager</p>
 												<p>Offshore Office 360 helped my business save thousands of dollars in the past 6 months. Arianna (Virtual Assistant) has been very helpful with organizing all the processes that we had trouble dealing with in the past.</p>
@@ -1004,7 +1004,7 @@
 										<div class="card">
 											<!-- .card-body -->
 											<div class="card-body">
-												<img src="images/img-person-2.jpg" class="img-fluid" alt="" />
+												<img src="images/img-brian-shad.jpg" class="img-fluid" alt="" />
 												<h4 class="mb-0">Brian Shad</h4>
 												<p class="fc-navy position mb-4">CEO</p>
 												<p>We love working with Jewel. Since her first day, she has performed really well and has become an integral part of ProLink.</p>
@@ -1025,7 +1025,7 @@
 										<div class="card">
 											<!-- .card-body -->
 											<div class="card-body">
-												<img src="images/img-person-1.jpg" class="img-fluid" alt="" />
+												<img src="images/img-gus-friedman.jpg" class="img-fluid" alt="" />
 												<h4 class="mb-0">Gus Friedman</h4>
 												<p class="fc-navy position mb-4">Marketing Manager</p>
 												<p>Offshore Office 360 helped my business save thousands of dollars in the past 6 months. Arianna (Virtual Assistant) has been very helpful with organizing all the processes that we had trouble dealing with in the past.</p>
@@ -1038,7 +1038,7 @@
 										<div class="card">
 											<!-- .card-body -->
 											<div class="card-body">
-												<img src="images/img-person-2.jpg" class="img-fluid" alt="" />
+												<img src="images/img-brian-shad.jpg" class="img-fluid" alt="" />
 												<h4 class="mb-0">Brian Shad</h4>
 												<p class="fc-navy position mb-4">CEO</p>
 												<p>We love working with Jewel. Since her first day, she has performed really well and has become an integral part of ProLink.</p>
